  * pg_virtualenv: Drop "BUG" message that really just means that
    pg_createcluster threw an error.
  * pg_createcluster: Drop new cluster if --start was requested and starting
    fails.
  * pg_createcluster: If not running as postgres or root, don't attempt to
    install config and data parent directories with owner postgres.

 -- Christoph Berg <myon@debian.org>  Sun, 08 Oct 2017 17:15:21 +0200

postgresql-common (186) unstable; urgency=medium

  * Team upload.
  * Bump default apt.postgresql.org version to 10.
  * t/020_create_sql_remove.t: Support 8.x xlog filenames.
  * Update ca translation, thanks Innocent De Marchi! (Closes: #876472)
  * PgCommon.pm: Use BSD ps syntax in check_pidfile_running.

 -- Christoph Berg <christoph.berg@credativ.de>  Thu, 05 Oct 2017 16:04:18 +0200

postgresql-common (185) unstable; urgency=medium

  * Team upload.

  [ Christoph Berg ]
  * Revert "Error out if a recovery.conf file is found in /etc/postgresql".
    It caused too many false positives for setups where a recovery.conf
    template is located in the etc directory. (Closes: #868367)
  * Bump default PostgreSQL version to 10.

  [ Marco Nenciarini ]
  * supported-versions: correctly detect version 10 when using 'installed'.

 -- Christoph Berg <christoph.berg@credativ.de>  Thu, 21 Sep 2017 12:07:30 +0200

postgresql-common (184) unstable; urgency=high

  * debian/maintscripts-functions: Use deb-systemd-invoke instead of
    invoke-rc.d to stop "postgresql@$ver-*"; jessie's invoke-rc.d does not
    support service patterns.

 -- Christoph Berg <myon@debian.org>  Tue, 11 Jul 2017 20:19:21 +0200

postgresql-common (183) unstable; urgency=medium

  * Team upload.

  [ Nishanth Aravamudan ]
  * debian/supported-versions: add Ubuntu 17.10. (Closes: #862420)

  [ Bernd Helmle ]
  * postgresql-common.spec: Fix installation path of manpages.

  [ Alex Badics ]
  * pg_ctlcluster: Use pg_ctl.conf during stop too.

  [ Christoph Berg ]