@@ -309,8 +309,8 @@ mkdir "/etc/postgresql/$MAJORS[-1]/broken";
 mkdir "/var/lib/postgresql/$MAJORS[-1]";
 mkdir "/var/lib/postgresql/$MAJORS[-1]/broken";
 mkdir "/var/lib/postgresql/$MAJORS[-1]/broken/base" or die "mkdir: $!";
-symlink "/var/lib/postgresql/$MAJORS[-1]/broken", "/etc/postgresql/$MAJORS[-1]/broken/pgdata" or die "symlink: $!";
 open F, ">/etc/postgresql/$MAJORS[-1]/broken/postgresql.conf" or die "open: $!";
+print F "data_directory = '/var/lib/postgresql/$MAJORS[-1]/broken'\n";
 close F;
 open F, ">/var/lib/postgresql/$MAJORS[-1]/broken/PG_VERSION" or die "open: $!";
 close F;
