@@ -8,6 +8,9 @@ postgresql-common (187) UNRELEASED; urgency=medium
     fails.
   * pg_createcluster: If not running as postgres or root, don't attempt to
     install config and data parent directories with owner postgres.
+  * pg_lsclusters, postgresql-generator, get_version_clusters, cluster_info,
+    read_conf_file: Accept dead postgresql.conf symlinks, filesystem might not
+    be mounted yet.
 
  -- Christoph Berg <myon@debian.org>  Sun, 08 Oct 2017 17:15:21 +0200
 
